2014-03-21  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c:
	  - OSC 1337 support is added. (Disabled by default though)
	  - Control characters escape 0x07 and 0x1b are available in Pt of
	    OSC Ps;Pt ST(BEL).

2014-03-19  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Compiler error is fixed if ENABLE_2_4_PPB is defined.

2014-03-17  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_font.c, win32/x_font.c:
	  x_calculate_char_width() checks if characters whose width is ambiguous
	  should be drawn one by one.

	* registobmp/main.c: Minor fixes.

2014-03-16  Araki Ken  <arakiken@users.sf.net>

	* registobmp/main.c:
	  - (C) option of C command is supported.
	  - (S) option of T command is supported.
	  - "" quotation of T command is supported.

	* registobmp/Makefile.in: @exec_prefix@ is added.

	* README, doc/ja/README.ja: Updated.

2014-03-16  Araki Ken  <arakiken@users.sf.net>

	* registobmp/main.c: Error check of TTF_RenderUTF8_Blended() is added.

2014-03-15  Araki Ken  <arakiken@users.sf.net>

	* registobmp/main.c: "F" and "C" commands are implemented.

	* ml_screen.c: normal_edit::bce_ch and alt_edit::bce_ch are synchronized
	  when changing from normal buffer to alt buffer and vice versa.

	* c_imagelib.c: STARTF_FORCEOFFFEEDBACK is set in executing registobmp.

2014-03-12  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: convert_regis_to_bmp() works on USE_WIN32API and __CYGWIN__.

	* x_display_x68kgrf.c: kik_priv_{restore|change}_e{u|g}id() are called
	  before and after open("/dev/grf0"). (Thanks to @tsutsuii san)

	* registobmp/main.c:
	  - Substitute strsep is added.
	  - The default font is changed from "arial.ttf" to
	    "c:\\Windows\\Fonts\\arial.ttf" on win32.
	  - The implementation of strsep() is added in case it doesn't exist.

	* registobmp/Makefile.in: @KIK_CFLAGS@ is added.

	* ml_screen.c: BCE fg/bg color is reset in switching to the alternate
	  screen buffer.

2014-03-11  Araki Ken  <arakiken@users.sf.net>
