@@ -114,7 +114,7 @@ dialog_callback(
 	jclass  class ;
 	static jmethodID  mid ;
 
-	if( style != KIK_DIALOG_OKCANCEL)
+	if( style != KIK_DIALOG_OKCANCEL || ! env_for_dialog)
 	{
 		return  -1 ;
 	}
@@ -1158,6 +1158,10 @@ Java_mlterm_MLTermPty_nativeOpen(
 
 	ret = ml_term_open_pty( nativeObj->term , cmd_path , argv , envv ,
 			host , pass , public_key , private_key) ;
+
+#ifdef  USE_LIBSSH2
+	env_for_dialog = NULL ;
+#endif
 
 	if( jarray_argv)
 	{
